--- a/index.html
+++ b/index.html
@@ -62,6 +62,32 @@
   
 </div>
 
+<footer class="footer">
+  <div class="container">
+    <div class="footer-content">
+      <span>Made with <span class="heart">&#10084;</span> by <b>Anupam Dutta</b></span>
+      <div class="social-media">
+        <a href="https://twitter.com/kinganupamdutta" target="_blank">
+          <i class="fab fa-twitter"><img class="soc" src="https://img.icons8.com/?size=512&id=119014&format=png"
+              alt="Email"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/kinganupamdutta/" target="_blank">
+          <i class="fab fa-linkedin"><img class="soc" src="https://i.gifer.com/3OZKi.gif" alt="Email"></i>
+        </a>
+        <a href="https://github.com/kinganupamdutta27" target="_blank">
+          <i class="fab fa-github"><img class="soc" src="https://img.icons8.com/?size=512&id=3tC9EQumUAuq&format=png"
+              alt="Email"></i>
+        </a>
+        <a href="mailto:anupamdutta.kalyani@outlook.com">
+          <i class="fas fa-envelope"><img class="soc" src="https://img.icons8.com/?size=512&id=44829&format=png"
+              alt="Email"></i>
+        </a>
+      </div>
+      <p class="copy">&copy; <span id="spyr"></span> Secure-Password. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
+
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   <script src="script.js"></script>
@@ -70,8 +96,8 @@
   This script places a badge on your repl's full-browser view back to your repl's cover
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
   teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  
+  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>-->
 </body>
 
 </html>
