--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               alt="Email"></i>
         </a>
       </div>
-      <p class="copy">&copy; <span id="spyr"></span> Secure-Password. All rights reserved.</p>
+      <p class="copy">&copy; <span id="spyr"></span> Clock-Time. All rights reserved.</p>
     </div>
   </div>
 </footer>
